template/src/index.css
@import '@bdxtown/canaille/src/scss/index.scss';

@tailwind base;
@tailwind utilities;

@font-face {
    font-family: 'CooperHewitt-Bold';
    src: url('/fonts/CooperHewitt-Bold.woff') format('woff'),
        url('http://localhost:8080/src/fonts/CooperHewitt-Bold.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'CooperHewitt-Medium';
    src: url('/fonts/CooperHewitt-Medium.woff') format('woff'),
        url('http://localhost:8080/src/fonts/CooperHewitt-Medium.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Atkinson Hyperlegible';
    src: url('/fonts/AtkinsonHyperlegible-Bold.woff2') format('woff2'),
        url('/fonts/AtkinsonHyperlegible-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Atkinson Hyperlegible';
    src: url('/fonts/AtkinsonHyperlegible-Regular.woff2') format('woff2'),
        url('/fonts/AtkinsonHyperlegible-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

html, body { 
    margin: 0;
    padding: 0;
    font-family: 'Atkinson Hyperlegible';
    font-size: 18px;
    background: #e8d0c0;
}

a {
    color: inherit;
}

header h1, header h2, header h3 
{
    font-family: 'CooperHewitt-Bold';
    line-height: 1.25;
    letter-spacing: 0.25;
    margin: 0;
}

header h1 {
    font-size: 5rem;
}

header h2 {
    font-size: 2rem;
}

header h3 {
    font-family: 'CooperHewitt-Medium';
    font-size: 1.3rem;
}

footer, time {
    font-family: 'CooperHewitt-Medium';
}

